--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -21,12 +21,15 @@
   </div>
   <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-1 col-md-5 col-md-offset-2">
     <button
-      disabled={{validate-email emailAddress}}
+      disabled={{invalidEmailAndMessage}}
       class="btn btn-primary btn-lg btn-block"
-      {{action 'saveInvitation'}}
+      {{action 'sendMessage'}}
     >Send message</button>
   </div>
 </div>
 
 <p>Or, feel free to <a href="mailto:lisaemly@gmail.com">reach out</a>! Comments and site improvements are always welcome!</p>
 
+{{#if responseMessage}}
+  <div class="alert alert-success">{{responseMessage}}</div>
+{{/if}}
