--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -13,8 +13,9 @@
       <div class="collapse navbar-collapse" id="main-navbar">
         <ul class="nav navbar-nav">
           {{#link-to 'index' tagName="li"}}<a href="">Home</a>{{/link-to}}
-          {{#link-to 'index' tagName="li"}}<a href="">About</a>{{/link-to}}
-          {{#link-to 'index' tagName="li"}}<a href="">Contact</a>{{/link-to}}
+          {{#link-to 'la-croix-flavors' tagName="li"}}<a href="">Flavor List</a>{{/link-to}}
+          {{#link-to 'about' tagName="li"}}<a href="">About</a>{{/link-to}}
+          {{#link-to 'contact' tagName="li"}}<a href="">Contact</a>{{/link-to}}
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
