--- a/frontend/app/templates/about.hbs
+++ b/frontend/app/templates/about.hbs
@@ -1,1 +1,3 @@
-<h1>About this site</h1>
+<h1>Welcome to the wild, weird world of La Croix</h1>
+
+<p>I'm just one mega fan trying to gather some interesting stats about La Croix consumption.</p>
