--- a/frontend/app/templates/la-croix-flavors.hbs
+++ b/frontend/app/templates/la-croix-flavors.hbs
@@ -2,7 +2,8 @@
 
 <div class="well">
   <ul class="nav nav-pills">
-    {{#link-to 'la-croix-flavors.index' tagName="li"}}List all{{/link-to}}
-    {{#link-to 'la-croix-flavors.new' tagName="li"}}Add new{{/link-to}}
+    {{#link-to 'la-croix-flavors.index' tagName="li"}}<a href="">List all</a>{{/link-to}}
+    {{#link-to 'la-croix-flavors.new' tagName="li"}}<a href="">Add new</a>{{/link-to}}
   </ul>
 </div>
+{{outlet}}
