Pluralizing La Croix

--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -14,6 +14,7 @@
         <ul class="nav navbar-nav">
           {{#link-to 'index' tagName="li"}}<a href="">Home</a>{{/link-to}}
           {{#link-to 'la-croix-flavors' tagName="li"}}<a href="">Flavor List</a>{{/link-to}}
+          {{#link-to 'la-croixs' tagName="li"}}<a href="">La Croix Journal</a>{{/link-to}}
           {{#link-to 'about' tagName="li"}}<a href="">About</a>{{/link-to}}
           {{#link-to 'contact' tagName="li"}}<a href="">Contact</a>{{/link-to}}
         </ul>
