--- a/frontend/app/templates/la-croixs.hbs
+++ b/frontend/app/templates/la-croixs.hbs
@@ -2,8 +2,8 @@
 
 <div class="well">
   <ul class="nav nav-pills">
-    {{#link-to 'la-croixs.index' tagName="li"}}List all{{/link-to}}
-    {{#link-to 'la-croixs.new' tagName="li"}}Add new{{/link-to}}
+    {{#link-to 'la-croixs.index' tagName="li"}}<a href="">List all</a>{{/link-to}}
+    {{#link-to 'la-croixs.new' tagName="li"}}<a href="">Add new</a>{{/link-to}}
   </ul>
 </div>
 {{outlet}}
